@@ -265,6 +265,9 @@ Trunk (unreleased changes)
     HADOOP-5734. Correct block placement policy description in HDFS
     Design document. (Konstantin Boudnik via shv)
 
+    HADOOP-5657. Validate data in TestReduceFetch to improve merge test
+    coverage. (cdouglas)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
